# openapi-generator-pip

./: .gitignore  .pre-commit-config.yaml  .travis.yml  DEVELOPMENT.md  README.md  publish.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: lint.yaml  publish.yaml  test.yaml
openapi_generator_cli/: __init__.py
tests/: test_cli.py
